[package]
description = "A minimal Rust lib for executing PTX code with nvidia GPU"
authors = ["Neutron3529 <qweytr1@main.ustc.edu.cn>"]
license = "AGPL-3.0"
repository = "https://github.com/Neutron3529/cuda_min"
keywords = ["cuda", "nvptx"]
name = "cuda_min"
version = "0.1.4"
edition = "2024"
publish = ["crates-io"]
autoexamples = false

[dependencies]

[features]
default = ["panic_handler"]
panic_handler = []
cudart = [] # You must make sure `$CUDA_PATH/lib` in  {LD,}_LIBRARY_PATH thus the rust can find the cudart library. Currently a `cuda_error_code_generator.rs` script is used for generating cuda error related scripts.
