[package]
description = "A minimal Rust lib for executing PTX code with nvidia GPU"
authors = ["Neutron3529 <qweytr1@main.ustc.edu.cn>"]
license = "AGPL-3.0"
repository = "https://github.com/Neutron3529/cuda_min"
keywords = ["cuda", "nvptx"]
name = "cuda_min"
version = "0.1.5-fix-warnings"
edition = "2024"
publish = ["crates-io"]
autoexamples = false

[dependencies]

[features]
default = ["panic-handler", "build-script-with-llvm-bitcode-linker", "using_v2_suffix"]
using_v2_suffix = [] # Using cuCtxCreate_v2/cuCtxDestroy_v2/cuMemAlloc_v2/cuMemcpyHtoDAsync_v2/cuMemcpyDtoHAsync_v2 rather than cuCtxCreate/cuCtxDestroy/cuMemAlloc/cuMemcpyHtoDAsync/cuMemcpyDtoHAsync, which is currently default behavior of `cuda.h`. Notice that, without _v2 suffix, some functions (e.g., vprintf) cannot be used. It is hightly recommanded to use _v2 suffix.
panic-handler = []
cudart = [] # You must make sure `$CUDA_PATH/lib` in  {LD,}_LIBRARY_PATH thus cargo can find the cudart library. Currently ont recommanded since we actually do not need this.
build-script-with-llvm-bitcode-linker = [] # Enabled by default, only works with host environment, do not affect GPU side.
native-error-desc = []
